Added service to serve tiles files (png)

--- a/web/index.html
+++ b/web/index.html
@@ -21,9 +21,9 @@
 		new L.StamenTileLayer("toner").addTo(map);
 
 		L.tileLayer('https://localhost:10110/{id}/{z}/{x}/{y}.png', {
-			maxZoom: 13,
+			maxZoom: 16,
 			attribution: 'Census ACS Server',
-			id: 'acs2012_5yr/VT/map'
+			id: 'censusacs/rest/censusacs/tiles/MA'
 		}).addTo(map);
 
 	</script>
