--- a/web/index.html
+++ b/web/index.html
@@ -2,10 +2,15 @@
 
 <head>
 
-	<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
-	<script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
+	<link rel="stylesheet" href="./css/leaflet.css" />
+	<script src="./js/leaflet.js"></script>
 	
-	<script src="stamen.js"></script>
+	<script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+	<script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+	
+	<script src="./js/stamen.js"></script>
+	<script src="./js/topojson.v1.min.js"></script>
+	<script src="./js/JsonTileLayer.js"></script>
 	
 	<link rel="stylesheet" href="./css/main.css" />
 
@@ -19,11 +24,11 @@
 		var map = L.map('map').setView([42.354, -71.065], 10);
 		
 		new L.StamenTileLayer("toner").addTo(map);
-
-		L.tileLayer('https://localhost:10110/{id}/{z}/{x}/{y}.png', {
+		
+		L.jsonTileLayer('https://localhost:10110/{id}/{z}/{x}/{y}.json', {
 			maxZoom: 16,
 			attribution: 'Census ACS Server',
-			id: 'censusacs/rest/censusacs/tiles/MA'
+			id: 'censusacs/rest/censusacs/jsontiles/MA'
 		}).addTo(map);
 
 	</script>
